SERVER-7721: require use of --db with --collection for mongodump