src/mongo/tools/dump.cpp
@@ -493,6 +493,11 @@ public:
         string db = _db;
 
         if ( db == "" ) {
+            if ( _coll != "" ) {
+                error() << "--db must be specified with --collection" << endl;
+                return -1;
+            }
+
             log() << "all dbs" << endl;
             auth( "admin" );
 
